@@ -1,6 +1,7 @@
 v1.5.6 (WIP)
 - Add TrueColorTags option and do not use TrueColor tag values by default
 - Add TextView.SetHighlightForegroundColor and TextView.SetHighlightBackgroundColor
+- Add TextView.SetVerticalAlign
 - Add Button.SetCursorRune (cursors are now shown within Buttons when focused by default)
 - Add CheckBox.SetCursorRune (cursors are now shown within CheckBoxes when focused by default)
 - Add DropDown.SetAlwaysDrawDropDownSymbol (DropDown symbols are now shown only when focused by default)
